# CMinimalFFT

./: CMakeLists.txt  README.md  bluestein.c  cminimalfft.h  direct.c  indexer.c  main.c  pfa.c  plan.c  plan.h  sincos.c  stockham.c  wheel.c
assembly/: CMakeLists.txt
test/: CMakeLists.txt  MT_random.c  MT_random.h  test17.c
